methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:57: error: '=>' expected but '=' found.
      case 1 <= coleur = jaune
                       ^